syntax = "proto2";

option go_package = "./protopb";

import "google/protobuf/empty.proto";

message Rating {
  required int64 movieId = 1;
  required float rating = 2;
  required int64 timestamp = 3;
  optional string clientId = 4;
  optional bool eof = 5;
}

service RatingService {
  rpc StreamRatings (stream Rating) returns (google.protobuf.Empty);
}
